// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No inntekt 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "
.inntekter--foofoo--blabla {
  grid-area: inntekter--foofoo--blabla;
}
",
      }
    }
  />,
  <div
    className="item inntekter inntekter--foofoo--blabla"
  >
    <div
      className="ekspanderbartPanel ekspanderbartPanel--lukket"
    >
      <button
        aria-expanded={false}
        className="ekspanderbartPanel__hode"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="ekspanderbartPanel__flex-wrapper"
        >
          <span
            className="typo-element ekspanderbartPanel__heading"
          >
            kr 0,00
          </span>
          <span
            className="ekspanderbartPanel__indikator"
          />
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Sum inntekt correctly 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "
.inntekter--1111111--1111111 {
  grid-area: inntekter--1111111--1111111;
}
",
      }
    }
  />,
  <div
    className="item inntekter inntekter--1111111--1111111"
  >
    <div
      className="ekspanderbartPanel ekspanderbartPanel--lukket"
    >
      <button
        aria-expanded={false}
        className="ekspanderbartPanel__hode"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="ekspanderbartPanel__flex-wrapper"
        >
          <span
            className="typo-element ekspanderbartPanel__heading"
          >
            kr 89 743,60
          </span>
          <span
            className="ekspanderbartPanel__indikator"
          />
        </div>
      </button>
    </div>
  </div>,
]
`;
